--- a/hilbert.html
+++ b/hilbert.html
@@ -10,7 +10,19 @@
   </style>
 </head>
 <body>
-  <script type="module" src="space_filling_script.js"></script>
+
+  <select id="curveType">
+    <option value="morton">Morton Curve</option>
+    <option value="hilbert">Hilbert Curve</option>
+    <option value="moore">Moore Curve</option>
+    <option value="dragon">Dragon Curve</option>
+    <option value="gosper">Gosper Curve</option>
+  </select>
+
+  <input type="number" id="order" min="1" max="10" value="5">
+
+  <button id="drawButton">Draw Curve</button>
   <canvas id="canvas" width="1600" height="1600"></canvas>
+  <script type="module" src="./space_filling_script.js"></script>
 </body>
 </html>
