--- a/hilbert.html
+++ b/hilbert.html
@@ -10,7 +10,12 @@
   </style>
 </head>
 <body>
-
+  <header>
+    Select a curve and input the desired order (iteration) below.
+    Then click "Draw Curve" to generate your desired curve. Some sizes
+    may be too large for the window to display, so they will only be partially
+    shown.
+  </header>
   <select id="curveType">
     <option value="morton">Morton Curve</option>
     <option value="hilbert">Hilbert Curve</option>
@@ -24,5 +29,6 @@
   <button id="drawButton">Draw Curve</button>
   <canvas id="canvas" width="1600" height="1600"></canvas>
   <script type="module" src="./space_filling_script.js"></script>
+  <script type="module" src="./measurements.mjs"></script>
 </body>
 </html>
